@@ -1,5 +1,5 @@
 /*
- * "$Id: admin.c,v 1.22.2.17 2002/10/15 21:30:27 mike Exp $"
+ * "$Id: admin.c,v 1.22.2.18 2002/10/16 22:13:00 mike Exp $"
  *
  *   Administration CGI for the Common UNIX Printing System (CUPS).
  *
@@ -231,7 +231,6 @@ do_am_class(http_t      *http,		/* I - HTTP connection */
       * Do the request and get back a response...
       */
 
-      httpReconnect(http);
       if ((response = cupsDoRequest(http, request, "/")) != NULL)
       {
 	ippSetCGIVars(response, NULL, NULL);
@@ -298,7 +297,6 @@ do_am_class(http_t      *http,		/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
      /*
@@ -359,7 +357,6 @@ do_am_class(http_t      *http,		/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
       if ((attr = ippFindAttribute(response, "member-uris", IPP_TAG_URI)) != NULL)
@@ -444,7 +441,6 @@ do_am_class(http_t      *http,		/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/admin/")) != NULL)
     {
       status = response->request.status.status_code;
@@ -537,7 +533,6 @@ do_am_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     oldinfo = cupsDoRequest(http, request, "/");
   }
   else
@@ -613,7 +608,6 @@ do_am_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
       ippSetCGIVars(response, NULL, NULL);
@@ -750,7 +744,6 @@ do_am_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
       if ((var = cgiGetVariable("PPD_MAKE")) == NULL)
@@ -871,7 +864,6 @@ do_am_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/admin/")) != NULL)
     {
       status = response->request.status.status_code;
@@ -1100,7 +1092,6 @@ do_config_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
       if ((attr = ippFindAttribute(response, "job-sheets-supported", IPP_TAG_ZERO)) != NULL)
@@ -1237,7 +1228,6 @@ do_config_printer(http_t      *http,	/* I - HTTP connection */
     * Do the request and get back a response...
     */
 
-    httpReconnect(http);
     if ((response = cupsDoFileRequest(http, request, "/admin/", tempfile)) != NULL)
     {
       status = response->request.status.status_code;
@@ -1318,7 +1308,6 @@ do_delete_class(http_t      *http,	/* I - HTTP connection */
   * Do the request and get back a response...
   */
 
-  httpReconnect(http);
   if ((response = cupsDoRequest(http, request, "/admin/")) != NULL)
   {
     status = response->request.status.status_code;
@@ -1395,7 +1384,6 @@ do_delete_printer(http_t      *http,	/* I - HTTP connection */
   * Do the request and get back a response...
   */
 
-  httpReconnect(http);
   if ((response = cupsDoRequest(http, request, "/admin/")) != NULL)
   {
     status = response->request.status.status_code;
@@ -1467,7 +1455,6 @@ do_printer_op(http_t      *http,	/* I - HTTP connection */
   * Do the request and get back a response...
   */
 
-  httpReconnect(http);
   if ((response = cupsDoRequest(http, request, "/admin/")) != NULL)
   {
     status = response->request.status.status_code;
@@ -1544,5 +1531,5 @@ get_line(char *buf,	/* I - Line buffer */
 
 
 /*
- * End of "$Id: admin.c,v 1.22.2.17 2002/10/15 21:30:27 mike Exp $".
+ * End of "$Id: admin.c,v 1.22.2.18 2002/10/16 22:13:00 mike Exp $".
  */
